# common

./: CHANGELOG.md  Makefile  Pipfile  setup.cfg  setup.py
src/pupiil-common/: __init__.py  libserver.py
src/pupiilcommon/: Certificate.py  EncodeFaces.py  LibClient.py  LibRecognition.py  LibRecvFrame.py  LibServer.py  MacAuxClass.py  __init__.py  libclient.py  libserver.py
src/pupiilcommon/data/: PREncodings.pkl
