[metadata]
name = pupiilcommon
version = 0.0.8
author = Saif Ul Islam, Ali Azlan, Ahmed Khan, Rafay Tariq, Shams Lalwani
author_email = saifulislam84210@gmail.com, aliazlan2002@gmail.com, muhammadahmed3210@gmail.com, abdulrafay03@gmail.com, shamlalwani52@gmail.com
description = The common package for the Pupiil project
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/Pupiil/common
project_urls =
    Bug Tracker = https://github.com/Pupiil/common/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft
    Operating System :: MacOS
    Operating System :: POSIX
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src

packages = find:
python_requires = >=3.6
install_requires =
    netifaces
    cryptography
    pyopenssl

setup_requires =
    twine
    build
    pytest
    auto-changelog
    markupsafe==2.0.1

[options.packages.find]
where = src